@@ -1,3 +1,6 @@
+2009/09/07 (TS):
+ - mve_lldrv.c: Added multicast-support driver entry points.
+
 2009/09/03 (TS):
  - lanIpBasicSetup.h: lanIpTakedown() now returns error/status code.
 
